test/pass/pass24.pl2014
IMPLEMENTATION OF testfile CONST blah=1;BEGIN test:=11*1END.
