test/fail/fail01.pl2014
implementation of testfile const BlaH=1;begin test:=11*1end.
